            - Added initial support for virtual knots and links, with new
              routines isClassical(), virtualGenus(), makeVirtual(), graft(),
              oddWrithe(), arrow(), groups(), extendedGroup(), and
              extendedGroups().
            - New routine alexander() and class constant alexanderVar.
            - New routine affineIndex() and class constant affineIndexVar.
            - New routine makeAlternating().
            - New routine seifertCircles().
            - New routine whiteheadDouble().
            - New routine longComplement().
            - New routines isConnected(), diagramComponents(),
              countDiagramComponents(), and diagramComponentIndices().
            - New routines insertLink() and moveContentsTo().
            - New routines countTrivialComponents() and pdAmbiguous(), to help
              understand the limitations of planar diagram codes.
            - New routine hash(), which uses the tight encoding.
            - New routines overForComponent() and underForComponent().
            - New variant of reverse() to reverse just one component of a
              multiple-component link.
            - New routines component(const StrandRef&) and componentsByStrand().
            - New routine linking2(), which returns twice the linking number;
              linking() will now throw an exception when called on a virtual
              link whose linking number is not an integer.
            - New routines signedGauss() and fromSignedGauss().
            - Regarding Reidemeister moves:
              + The (check, perform) variants of r1(), r2() and r3() are
                deprecated.  You should now use these routines _without_ extra
                check/perform arguments: they will always check for and (if
                possible) perform the relevant moves.
              + New routines r2Virtual(), hasR2Virtual() and withR2Virtual(),