@@ -65,8 +65,53 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
     ui = new QWidget();
     QBoxLayout* layout = new QVBoxLayout(ui);
 
-    auto* label = new QLabel(tr("<b>Jones</b>"), ui);
-    QString msg = tr("The Jones polynomial of this link.<p>"
+    // ---------- Alexander polynomial ----------
+
+    alexanderBlock = new QWidget();
+    auto* blockLayout = new QVBoxLayout(alexanderBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
+
+    auto* label = new QLabel(tr("<b>Alexander</b>"), ui);
+    QString msg = tr("<qt>The Alexander polynomial of this link.<p>"
+        "At present, Regina only computes Alexander polynomials for "
+        "knots, not multiple-component links.</qt>");
+    label->setWhatsThis(msg);
+    blockLayout->addWidget(label);
+
+    blockLayout->addSpacing(5);
+
+    auto* sublayout = new QHBoxLayout();
+    sublayout->setContentsMargins(0, 0, 0, 0);
+    sublayout->setSpacing(0);
+    alexander = new QLabel(ui);
+    alexander->setWordWrap(true);
+    alexander->setWhatsThis(msg);
+    sublayout->addWidget(alexander, 1);
+    btnAlexander = new QPushButton(ReginaSupport::themeIcon("system-run"),
+        tr("Calculate"), ui);
+    btnAlexander->setToolTip(tr("Calculate the Alexander polynomial"));
+    btnAlexander->setWhatsThis(tr("<qt>Calculate the Alexander polynomial "
+        "of this link.<p>"
+        "<b>Warning:</b> This calculation is polynomial time, but it may "
+        "still be a little slow for larger links (which is why the "
+        "Alexander polynomial is not always computed automatically).</qt>"));
+    sublayout->addWidget(btnAlexander);
+    connect(btnAlexander, SIGNAL(clicked()), this, SLOT(calculateAlexander()));
+    blockLayout->addLayout(sublayout);
+
+    blockLayout->addSpacing(10);
+    layout->addWidget(alexanderBlock);
+
+    // ---------- Jones polynomial ----------
+
+    auto* jonesBlock = new QWidget();
+    blockLayout = new QVBoxLayout(jonesBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
+
+    label = new QLabel(tr("<b>Jones</b>"), ui);
+    msg = tr("The Jones polynomial of this link.<p>"
         "The Jones polynomial is a Laurent polynomial "
         "in the square root of <i>t</i>, and Regina will try to "
         "present it in this way.<p>"
@@ -75,11 +120,11 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         "the square root of <i>t</i> will be represented by the single "
         "symbol <i>x</i> instead.");
     label->setWhatsThis(msg);
-    layout->addWidget(label);
+    blockLayout->addWidget(label);
 
-    layout->addSpacing(5);
+    blockLayout->addSpacing(5);
 
-    auto* sublayout = new QHBoxLayout();
+    sublayout = new QHBoxLayout();
     sublayout->setContentsMargins(0, 0, 0, 0);
     sublayout->setSpacing(0);
     jones = new QLabel(ui);
@@ -96,9 +141,17 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         "always computed automatically).</qt>"));
     sublayout->addWidget(btnJones);
     connect(btnJones, SIGNAL(clicked()), this, SLOT(calculateJones()));
-    layout->addLayout(sublayout);
+    blockLayout->addLayout(sublayout);
 
-    layout->addSpacing(10);
+    blockLayout->addSpacing(10);
+    layout->addWidget(jonesBlock);
+
+    // ---------- HOMFLY-PT polynomial ----------
+
+    homflyBlock = new QWidget();
+    blockLayout = new QVBoxLayout(homflyBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
 
     sublayout = new QHBoxLayout();
     sublayout->setContentsMargins(0, 0, 0, 0);
@@ -140,9 +193,9 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         btnAZ->setChecked(true);
     connect(btnAZ, SIGNAL(toggled(bool)), this, SLOT(homflyTypeChanged(bool)));
     connect(btnLM, SIGNAL(toggled(bool)), this, SLOT(homflyTypeChanged(bool)));
-    layout->addLayout(sublayout);
+    blockLayout->addLayout(sublayout);
 
-    layout->addSpacing(5);
+    blockLayout->addSpacing(5);
 
     sublayout = new QHBoxLayout();
     sublayout->setContentsMargins(0, 0, 0, 0);
@@ -161,16 +214,24 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         "always computed automatically).</qt>"));
     sublayout->addWidget(btnHomfly);
     connect(btnHomfly, SIGNAL(clicked()), this, SLOT(calculateHomfly()));
-    layout->addLayout(sublayout);
+    blockLayout->addLayout(sublayout);
 
-    layout->addSpacing(10);
+    blockLayout->addSpacing(10);
+    layout->addWidget(homflyBlock);
+
+    // ---------- Kauffman bracket ----------
+
+    auto* bracketBlock = new QWidget();
+    blockLayout = new QVBoxLayout(bracketBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
 
     label = new QLabel(tr("<b>Kauffman bracket</b>"), ui);
     msg = tr("The Kauffman bracket polynomial of this link.");
     label->setWhatsThis(msg);
-    layout->addWidget(label);
+    blockLayout->addWidget(label);
 
-    layout->addSpacing(5);
+    blockLayout->addSpacing(5);
 
     sublayout = new QHBoxLayout();
     sublayout->setContentsMargins(0, 0, 0, 0);
@@ -189,16 +250,48 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         "always computed automatically).</qt>"));
     sublayout->addWidget(btnBracket);
     connect(btnBracket, SIGNAL(clicked()), this, SLOT(calculateBracket()));
-    layout->addLayout(sublayout);
+    blockLayout->addLayout(sublayout);
 
-    layout->addSpacing(10);
+    blockLayout->addSpacing(10);
+    layout->addWidget(bracketBlock);
 
-    label = new QLabel(tr("<b>Arrow polynomial</b>"), ui);
-    msg = tr("The arrow polynomial of this link.");
+    // ---------- Affine index polynomial ----------
+
+    affineIndexBlock = new QWidget();
+    blockLayout = new QVBoxLayout(affineIndexBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
+
+    label = new QLabel(tr("<b>Affine index</b>"), ui);
+    msg = tr("<qt>The affine index polynomial of this virtual link.<p>"
+        "At present, Regina only computes affine index polynomials for "
+        "knots, not multiple-component links.</qt>");
     label->setWhatsThis(msg);
-    layout->addWidget(label);
+    blockLayout->addWidget(label);
 
-    layout->addSpacing(5);
+    blockLayout->addSpacing(5);
+
+    affineIndex = new QLabel(ui);
+    affineIndex->setWordWrap(true);
+    affineIndex->setWhatsThis(msg);
+    blockLayout->addWidget(affineIndex);
+
+    blockLayout->addSpacing(10);
+    layout->addWidget(affineIndexBlock);
+
+    // ---------- Arrow polynomial ----------
+
+    arrowBlock = new QWidget();
+    blockLayout = new QVBoxLayout(arrowBlock);
+    blockLayout->setContentsMargins(0, 0, 0, 0);
+    blockLayout->setSpacing(0);
+
+    label = new QLabel(tr("<b>Arrow</b>"), ui);
+    msg = tr("The arrow polynomial of this virtual link.");
+    label->setWhatsThis(msg);
+    blockLayout->addWidget(label);
+
+    blockLayout->addSpacing(5);
 
     sublayout = new QHBoxLayout();
     sublayout->setContentsMargins(0, 0, 0, 0);
@@ -217,7 +310,12 @@ LinkPolynomialUI::LinkPolynomialUI(regina::PacketOf<regina::Link>* packet,
         "always computed automatically).</qt>"));
     sublayout->addWidget(btnArrow);
     connect(btnArrow, SIGNAL(clicked()), this, SLOT(calculateArrow()));
-    layout->addLayout(sublayout);
+    blockLayout->addLayout(sublayout);
+
+    blockLayout->addSpacing(10);
+    layout->addWidget(arrowBlock);
+
+    // ---------- End of polynomial blocks ----------
 
     layout->addStretch(1);
 
@@ -252,6 +350,43 @@ QWidget* LinkPolynomialUI::getInterface() {
 void LinkPolynomialUI::refresh() {
     bool unicode = ReginaPrefSet::global().displayUnicode;
 
+    if (link->isClassical()) {
+        if (link->isEmpty()) {
+            btnAlexander->setVisible(false);
+            alexander->setText("Not available for empty links");
+            QPalette pal = alexander->palette();
+            pal.setColor(alexander->foregroundRole(), Qt::darkGray);
+            alexander->setPalette(pal);
+        } else if (link->countComponents() > 1) {
+            btnAlexander->setVisible(false);
+            alexander->setText("Not available for multiple-component links");
+            QPalette pal = alexander->palette();
+            pal.setColor(alexander->foregroundRole(), Qt::darkGray);
+            alexander->setPalette(pal);
+        } else if (link->knowsAlexander() ||
+                link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
+            btnAlexander->setVisible(false);
+            if (unicode)
+                alexander->setText(link->alexander().utf8(Link::alexanderVar).
+                    c_str());
+            else
+                alexander->setText(link->alexander().str(Link::alexanderVar).
+                    c_str());
+            QPalette pal = alexander->palette();
+            pal.setColor(alexander->foregroundRole(), Qt::black);
+            alexander->setPalette(pal);
+        } else {
+            alexander->setText(tr("Unknown"));
+            QPalette pal = alexander->palette();
+            pal.setColor(alexander->foregroundRole(), Qt::darkGray);
+            alexander->setPalette(pal);
+            btnAlexander->setVisible(true);
+        }
+        alexanderBlock->setVisible(true);
+    } else {
+        alexanderBlock->setVisible(false);
+    }
+
     if (link->knowsJones() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
         btnJones->setVisible(false);
 
@@ -283,47 +418,45 @@ void LinkPolynomialUI::refresh() {
         btnJones->setVisible(true);
     }
 
-    if (! link->isClassical()) {
-        btnHomfly->setVisible(false);
-        homfly->setText("Not available for virtual links");
-        QPalette pal = homfly->palette();
-        pal.setColor(homfly->foregroundRole(), Qt::darkGray);
-        homfly->setPalette(pal);
-    } else if (link->knowsHomfly() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
-        btnHomfly->setVisible(false);
-        if (! btnLM->isChecked()) {
-            if (unicode)
-                homfly->setText(link->homflyAZ().utf8(
-                    regina::Link::homflyAZVarX,
-                    regina::Link::homflyAZVarY).c_str());
-            else
-                homfly->setText(link->homflyAZ().str(
-                    "a", regina::Link::homflyAZVarY).c_str());
+    if (link->isClassical()) {
+        if (link->knowsHomfly() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
+            btnHomfly->setVisible(false);
+            if (! btnLM->isChecked()) {
+                if (unicode)
+                    homfly->setText(link->homflyAZ().utf8(
+                        regina::Link::homflyAZVarX,
+                        regina::Link::homflyAZVarY).c_str());
+                else
+                    homfly->setText(link->homflyAZ().str("a", "z").c_str());
+            } else {
+                if (unicode)
+                    homfly->setText(link->homflyLM().utf8(
+                        regina::Link::homflyLMVarX,
+                        regina::Link::homflyLMVarY).c_str());
+                else
+                    homfly->setText(link->homflyLM().str("l", "m").c_str());
+            }
+            QPalette pal = homfly->palette();
+            pal.setColor(homfly->foregroundRole(), Qt::black);
+            homfly->setPalette(pal);
         } else {
-            if (unicode)
-                homfly->setText(link->homflyLM().utf8(
-                    "l", regina::Link::homflyLMVarY).c_str());
-            else
-                homfly->setText(link->homflyLM().str(
-                    "l", regina::Link::homflyLMVarY).c_str());
+            homfly->setText(tr("Unknown"));
+            QPalette pal = homfly->palette();
+            pal.setColor(homfly->foregroundRole(), Qt::darkGray);
+            homfly->setPalette(pal);
+            btnHomfly->setVisible(true);
         }
-        QPalette pal = homfly->palette();
-        pal.setColor(homfly->foregroundRole(), Qt::black);
-        homfly->setPalette(pal);
+        homflyBlock->setVisible(true);
     } else {
-        homfly->setText(tr("Unknown"));
-        QPalette pal = homfly->palette();
-        pal.setColor(homfly->foregroundRole(), Qt::darkGray);
-        homfly->setPalette(pal);
-        btnHomfly->setVisible(true);
+        homflyBlock->setVisible(false);
     }
 
     if (link->knowsBracket() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
         btnBracket->setVisible(false);
         if (unicode)
-            bracket->setText(link->bracket().utf8("A").c_str());
+            bracket->setText(link->bracket().utf8(Link::bracketVar).c_str());
         else
-            bracket->setText(link->bracket().str("A").c_str());
+            bracket->setText(link->bracket().str(Link::bracketVar).c_str());
         QPalette pal = bracket->palette();
         pal.setColor(bracket->foregroundRole(), Qt::black);
         bracket->setPalette(pal);
@@ -335,24 +468,66 @@ void LinkPolynomialUI::refresh() {
         btnBracket->setVisible(true);
     }
 
-    if (link->knowsArrow() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
-        btnArrow->setVisible(false);
-        if (unicode)
-            arrow->setText(link->arrow().utf8().c_str());
-        else
-            arrow->setText(link->arrow().str().c_str());
-        QPalette pal = arrow->palette();
-        pal.setColor(arrow->foregroundRole(), Qt::black);
-        arrow->setPalette(pal);
-        arrow->setVisible(true);
+    if (! link->isClassical()) {
+        if (link->isEmpty()) {
+            affineIndex->setText("Not available for empty links");
+            QPalette pal = affineIndex->palette();
+            pal.setColor(affineIndex->foregroundRole(), Qt::darkGray);
+            affineIndex->setPalette(pal);
+        } else if (link->countComponents() > 1) {
+            affineIndex->setText("Not available for multiple-component links");
+            QPalette pal = affineIndex->palette();
+            pal.setColor(affineIndex->foregroundRole(), Qt::darkGray);
+            affineIndex->setPalette(pal);
+        } else {
+            if (unicode)
+                affineIndex->setText(link->affineIndex().utf8(
+                    Link::affineIndexVar).c_str());
+            else
+                affineIndex->setText(link->affineIndex().str(
+                    Link::affineIndexVar).c_str());
+            QPalette pal = affineIndex->palette();
+            pal.setColor(affineIndex->foregroundRole(), Qt::black);
+            affineIndex->setPalette(pal);
+        }
+        affineIndexBlock->setVisible(true);
     } else {
-        arrow->setText(tr("Unknown"));
-        QPalette pal = arrow->palette();
-        pal.setColor(arrow->foregroundRole(), Qt::darkGray);
-        arrow->setPalette(pal);
-        arrow->setVisible(true);
-        btnArrow->setVisible(true);
+        affineIndexBlock->setVisible(false);
     }
+
+    if (! link->isClassical()) {
+        if (link->knowsArrow() || link->size() <= MAX_LINK_AUTO_POLYNOMIALS) {
+            btnArrow->setVisible(false);
+            if (unicode)
+                arrow->setText(link->arrow().utf8().c_str());
+            else
+                arrow->setText(link->arrow().str().c_str());
+            QPalette pal = arrow->palette();
+            pal.setColor(arrow->foregroundRole(), Qt::black);
+            arrow->setPalette(pal);
+        } else {
+            arrow->setText(tr("Unknown"));
+            QPalette pal = arrow->palette();
+            pal.setColor(arrow->foregroundRole(), Qt::darkGray);
+            arrow->setPalette(pal);
+            btnArrow->setVisible(true);
+        }
+        arrowBlock->setVisible(true);
+    } else {
+        arrowBlock->setVisible(false);
+    }
+}
+
+void LinkPolynomialUI::calculateAlexander() {
+    PatienceDialog* dlg = PatienceDialog::warn(tr(
+        "Computing Alexander polynomial is polynomial time,\n"
+        "but it can still be a little slow for larger diagrams.\n\n"
+        "Please be patient."), ui);
+    link->alexander();
+    delete dlg;
+
+    // Now calling alexander() should be instantaneous.
+    refresh();
 }
 
 void LinkPolynomialUI::calculateJones() {
@@ -410,6 +585,22 @@ void LinkPolynomialUI::calculateArrow() {
 
     // Now calling arrow() should be instantaneous.
     refresh();
+}
+
+void LinkPolynomialUI::contextAlexander(const QPoint& pos) {
+    if (! link->knowsAlexander())
+        return;
+
+    QMenu m(tr("Context menu"), alexander);
+
+    QAction copy("Copy", this);
+    QAction copyPlain("Copy plain text", this);
+    connect(&copy, SIGNAL(triggered()), this, SLOT(copyAlexander()));
+    connect(&copyPlain, SIGNAL(triggered()), this, SLOT(copyAlexanderPlain()));
+    m.addAction(&copy);
+    m.addAction(&copyPlain);
+
+    m.exec(alexander->mapToGlobal(pos));
 }
 
 void LinkPolynomialUI::contextJones(const QPoint& pos) {
@@ -476,6 +667,25 @@ void LinkPolynomialUI::contextArrow(const QPoint& pos) {
     m.exec(arrow->mapToGlobal(pos));
 }
 
+void LinkPolynomialUI::contextAffineIndex(const QPoint& pos) {
+    // The affine index polynomial is always computed.
+
+    QMenu m(tr("Context menu"), affineIndex);
+
+    QAction copy("Copy", this);
+    QAction copyPlain("Copy plain text", this);
+    connect(&copy, SIGNAL(triggered()), this, SLOT(copyAffineIndex()));
+    connect(&copyPlain, SIGNAL(triggered()), this, SLOT(copyAffineIndexPlain()));
+    m.addAction(&copy);
+    m.addAction(&copyPlain);
+
+    m.exec(affineIndex->mapToGlobal(pos));
+}
+
+void LinkPolynomialUI::copyAlexander() {
+    QApplication::clipboard()->setText(alexander->text());
+}
+
 void LinkPolynomialUI::copyJones() {
     QApplication::clipboard()->setText(jones->text());
 }
@@ -490,6 +700,15 @@ void LinkPolynomialUI::copyBracket() {
 
 void LinkPolynomialUI::copyArrow() {
     QApplication::clipboard()->setText(arrow->text());
+}
+
+void LinkPolynomialUI::copyAffineIndex() {
+    QApplication::clipboard()->setText(affineIndex->text());
+}
+
+void LinkPolynomialUI::copyAlexanderPlain() {
+    QApplication::clipboard()->setText(link->alexander().str(
+        Link::alexanderVar).c_str());
 }
 
 void LinkPolynomialUI::copyJonesPlain() {
@@ -515,11 +734,17 @@ void LinkPolynomialUI::copyHomflyPlain() {
 }
 
 void LinkPolynomialUI::copyBracketPlain() {
-    QApplication::clipboard()->setText(link->bracket().str("A").c_str());
+    QApplication::clipboard()->setText(link->bracket().str(Link::bracketVar).
+        c_str());
 }
 
 void LinkPolynomialUI::copyArrowPlain() {
     QApplication::clipboard()->setText(link->arrow().str().c_str());
+}
+
+void LinkPolynomialUI::copyAffineIndexPlain() {
+    QApplication::clipboard()->setText(link->affineIndex().str(
+        Link::affineIndexVar).c_str());
 }
 
 void LinkPolynomialUI::homflyTypeChanged(bool checked) {
@@ -538,9 +763,10 @@ void LinkPolynomialUI::updatePreferences() {
 void LinkPolynomialUI::updateLabels() {
     if (ReginaPrefSet::global().displayUnicode) {
         btnAZ->setText(tr("(α, z)"));
+        btnLM->setText(tr("(𝓁, m)"));
     } else {
         btnAZ->setText(tr("(a, z)"));
+        btnLM->setText(tr("(l, m)"));
     }
-    btnLM->setText(tr("(l, m)"));
 }
 
